--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ img {
 .strava-widget, .lastfm-widget {
     width: 100%;
     border: none;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
