Christmas theme, more buttons.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-  --bg-color: #282828;
-  --text-color: #e2cca9;
+  --bg-color: #0E4732;
+  --text-color: #E67E80;
   --main-font: 'Times New Roman', serif;
   --header-font: '3270', "Courier New", Courier, monospace;
 }
