--- a/styles.css
+++ b/styles.css
@@ -82,11 +82,17 @@ body {
     color: var(--text-color);
     font-family: var(--main-font);
     font-weight: normal;
+    font-size: 16px;
     margin: 0;
     padding: 0;
     -webkit-font-smoothing: none;
     -moz-osx-font-smoothing: unset;
     font-smooth: never;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neigbor;
 }
 pre {
   font-family: 'GohuFont uni11 Nerd Font', sans-serif;
@@ -102,6 +108,12 @@ footer {
     -webkit-font-smoothing: none;
     -moz-osx-font-smoothing: unset;
     font-smooth: never;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neigbor;
+
 }
 
 .container {
